Archive2/b0/4810101f1b677d/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:20:5: error: expected '}' before 'std'
     std::string str = {"hello" + "world"};    
     ^
main.cpp:20:5: error: expected ',' or ';' before 'std'
